--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^7.6.1",
+    "react-text-transition": "^3.1.0",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
