--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
+    "prop-types": "^15.8.1",
+    "react": "^19.1.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "^19.1.0",
+    "react-dom": "^19.1.1",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
