:white_check_mark: :bug: :rocket: :alien: :robot: vai estabiliza otum

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,19 @@
           "value": "public, max-age=31536000, immutable"
         }
       ]
+    },
+    {
+      "source": "/miniatura-social.jpg",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        },
+        {
+          "key": "Content-Type",
+          "value": "image/jpeg"
+        }
+      ]
     }
   ]
 }
