--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.510.0",
     "next-themes": "^0.4.6",
+    "pixelarticons": "^1.8.1",
     "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-day-picker": "8.10.1",
