--- a/vercel.json
+++ b/vercel.json
@@ -14,13 +14,23 @@
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "value": "public, max-age=86400, s-maxage=86400"
         },
         {
           "key": "Content-Type",
           "value": "image/jpeg"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
         }
       ]
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/miniatura-social.jpg",
+      "destination": "/miniatura-social.jpg"
     }
   ]
 }
