--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,30 @@
 {
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|webp|mp4|webm|woff|woff2|ttf|otf|eot|ico|xml|txt|pdf|zip|rar|json|webmanifest))$",
+      "continue": true
+    },
+    {
+      "src": "/miniatura-social.jpg",
+      "headers": {
+        "Cache-Control": "public, max-age=86400",
+        "Content-Type": "image/jpeg"
+      },
+      "continue": true
+    },
+    {
+      "src": "/[^.]+",
+      "dest": "/api/ssrOG"
+    },
+    {
+      "src": "/",
+      "dest": "/api/ssrOG"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*).mp3",
@@ -25,12 +51,6 @@
           "value": "*"
         }
       ]
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/miniatura-social.jpg",
-      "destination": "/miniatura-social.jpg"
     }
   ]
 }
