--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^19.1.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.1",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
