:white_check_mark: :bug: :rocket: :alien: :robot: MANUTENCA2O DE EMERGENCIA

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 node_modules
 gitkill.bat
 curriculo.js
-header2.jsx
-particlebackground2.jsx
-app2.css
-app2.jsx
-index2.css
+Header2.jsx
+ParticleBackground2.jsx
+App2.css
+App2.jsx
+Index2.css
